<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/uploader_pro_pic"
                    android:layout_width="15dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/postpic1"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@android:color/darker_gray"
                    />

                <TextView
                    android:id="@+id/tv_uploader_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/pro_name"
                    android:textColor="@android:color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <ImageButton
                    android:layout_marginLeft="280dp"
                    android:tint="@android:color/darker_gray"
                    android:background="@android:color/white"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/dots"/>
            </LinearLayout>
        </RelativeLayout>
        <ImageView
            android:id="@+id/post_pic"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/propic1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/heart"

                    ></ImageView>
                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/com"></ImageView>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/liker_pro_pic"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/propic3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/liked_by"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/liker_name"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="bhuvan.bam"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="and"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/tv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="24 others"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_uploader_name_caption"
                android:layout_width="85dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Name"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="95dp"
                android:layout_marginRight="20dp"
                android:textColor="#000080"
                android:text="#sundayfunday #beach #relax #biking #mnsquad"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_pro_pic"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:src="@drawable/propic2"
                app:civ_border_width="1dp"
                app:civ_border_color="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/com1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="14dp"
                android:text="@string/add_com"
                android:textSize="16dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/time"
            android:textSize="12dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </RelativeLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"

        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@color/accent"
        app:menu_fab_show_animation="@anim/show_from_bottom"
        app:menu_fab_hide_animation="@anim/hide_to_bottom">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            fab:fab_size="mini"
            android:src="@drawable/ic_action_pro"
            android:onClick="GoToMyProfile"
            fab:fab_label="Profile" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="addPost"
            android:src="@drawable/ic_action_cam"
            fab:fab_label="Post"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            fab:fab_size="mini"
            fab:fab_label="Menu item 1" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>




